[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
    {name="mfroissa"},
]
description = "My first package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {text = "MIT"}
